threeJS running, with test model under /threeJS

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  br
-  p Upload Form:
-  form(action="/upload", method="post", enctype="multipart/form-data")
-    input(type="file", name="modelFile")
-    br
-    input(type="submit")
+	h1= title
+	p Welcome to #{title}
+	br
+	p Upload Form:
+	form(action="/upload", method="post", enctype="multipart/form-data")
+		input(type="file", name="modelFile")
+		br
+		input(type="submit")
+	br
+	a(href='/threeJS') View Model
