--- a/views/threeJS.jade
+++ b/views/threeJS.jade
@@ -7,7 +7,12 @@ block content
 	script(src='javascripts/ThreeJS/Detector.js')
 	script(src='javascripts/ThreeJS/stats.min.js')
 	script(src='javascripts/ThreeJS/setup.js')
+	style(text/css)
+		#container3D{
+			width: 900px;
+		}
 	h1= title
-	div#container3D
+	br
+	div#container3D.well
 	br
 	a(href='/') go back to Home
