--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,14 +22,14 @@ html
               li
                 a(href='/user/signup') Sign up
               li
-                a(href='/user/login') Sign in
+                a(href='/user/signin') Sign in
               li
                 a(href='/users') Userlist
               li
                 a(href='/threeJS') 3D Viewer
             ul.nav.pull-right
               li
-                a(href='/logout') Logout
+                a(href='/user/logout') Logout
     div.container
       div.hero-unit
         block content
