--- a/views/users.jade
+++ b/views/users.jade
@@ -4,6 +4,22 @@ block content
 	h1= title
 	br
 	p List of all registered Users
+	- var number = 0;
+	div.well
+		table.table
+			thead
+				tr
+					th #
+					th Username
+					th E-Mail
+			tbody
+				for user in users
+					- number++;
+					tr
+						td= number
+						td= user.username
+						td= user.email
+
 	//ul
 	//	for user in users
-	//		li= user.username 
+	//		li= user.username
