--- a/views/signin.jade
+++ b/views/signin.jade
@@ -4,6 +4,11 @@ block content
 	h1= title
 	br
 	div.span3.well
+		if (message[0])	
+			div.alert.alert-error
+				a.close(data-dismiss="alert", href="#")×
+				h6=message
+		br
 		form(action="/user/login", method="post")
 			input(id='username', type='text', value='', name='username', placeholder='Username')
 			br
