--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,10 +6,7 @@ html
     // Bootstrap
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
-    style(type="text/css")
-      .no-space{
-      margin-left: 0;
-      }
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     script(src='/javascripts/jquery-1.10.0.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
@@ -20,25 +17,27 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a(href='/').brand 3DViewer
-
+          a(href='/').brand Match-System
           div.nav-collapse.collapse
             ul.nav
               li
-                a(href='/user/signup') Sign up
-              li
-                a(href='/user/signin') Sign in
-              li
                 a(href='/users') Userlist
-              li
-                a(href='/threeJS') 3D Viewer
+              if currentUser.username
+                li
+                  a(href='/threeJS') 3D Viewer
             ul.nav.pull-right
-              li
-                a(href='/user/logout') Logout
-          if currentUser.username
-            h6.label.label-info.pull-right logged in as <em>#{currentUser.username}</em>
-          else
-            h6.pull-right not logged in
+              if currentUser.username
+                li.dropdown
+                  a(href="#", data-toggle="dropdown").dropdown-toggle #{currentUser.username}
+                    b.caret
+                  ul.dropdown-menu
+                    li
+                      a(href='/user/logout') Logout
+              else
+                li
+                  a(href='/user/signup') Sign up
+                li
+                  a(href='/user/signin') Sign in
     div.container
-      div.hero-unit
+      div.content
         block content
