fixed upload bugs, created Dashboard with uploaded models in list

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,8 +25,9 @@ html
               if currentUser.username
                 li
                   a(href='/threeJS') 3D Viewer
+                li
+                  a(href='/user/dashboard') Dashboard
             ul.nav.pull-right
-              - console.log("Hure=" + currentUser);
               if currentUser.username
                 li.dropdown
                   a(href="#", data-toggle="dropdown").dropdown-toggle #{currentUser.username}
