--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,30 +1,30 @@
 extends layout
 
 block content
-
-    h1= title
-    br
-    p List of all registered Users
-    - var number = 0;
-    div.well
-        table.table
-            thead
-                tr
-                    th #
-                    th Modelname
-                    th created at
-                    th direct link
-                    th delete
-            tbody
-                for model in models
-                    - number++;
+    div.row-fluid
+        h1 Dashboard
+        div.spacer5
+        p List of all your uploaded models
+        - var number = 0;
+        div.well
+            table.table
+                thead
                     tr
-                        td= number
-                        td= model.name
-                        td= model.created
-                        td
-                            a(href='/user/models/' + model._id).btn.btn-inverse Direct Link
-                        td
-                            form( action='/user/deleteModel', method='post' )
-                                input(type='hidden', name='model_id', value=model._id)
-                                input(type='submit', value='delete').btn.btn-danger
+                        th #
+                        th Modelname
+                        th created at
+                        th direct link
+                        th delete
+                tbody
+                    for model in models
+                        - number++;
+                        tr
+                            td= number
+                            td= model.name
+                            td= model.created
+                            td
+                                a(href='/user/models/' + model._id).btn.btn-inverse Direct Link
+                            td
+                                form( action='/user/deleteModel', method='post' )
+                                    input(type='hidden', name='model_id', value=model._id)
+                                    input(type='submit', value='delete').btn.btn-danger
