--- a/views/signin.jade
+++ b/views/signin.jade
@@ -1,18 +1,21 @@
 extends layout
 
 block content
-	h1= title
-	br
-	div.span3.well
-		if (message[0])	
-			div.alert.alert-error
-				a.close(data-dismiss="alert", href="#")×
-				h6=message
-		br
-		form(action="/user/login", method="post")
-			input(id='username', type='text', value='', name='username', placeholder='Username')
-			br
-			input(id='password', type='password', value='', name='password', placeholder='Password')
-			br
-			input(type='submit', value='Sign In').btn.btn-primary
-	div.clearfix
+    div.row-fluid
+        div.span12
+            div.hero-unit
+                h3 Sign in
+                if (message[0])	
+                    div.alert.alert-error
+                        a.close(data-dismiss="alert", href="#")×
+                        h6=message
+                br
+                div.span4
+                    form(action="/user/login", method="post")
+                        input(id='username', type='text', value='', name='username', placeholder='Username')
+                        br
+                        input(id='password', type='password', value='', name='password', placeholder='Password')
+                        br
+                        br
+                        input(type='submit', value='Sign In').btn.btn-primary
+                div.clearfix
